crates/tui/src/ui/snapshots/mxr_tui__ui__now_lens__tests__now_lens_arrivals_80.snap
---
source: crates/tui/src/ui/now_lens.rs
expression: rendered
---
"╭ Now ─ The few things that need you now, from every mode. ────────────────────╮"
"│  Friday afternoon. 3 people, 2 things to act on.                             │"
"│  Since 08:12: 50 arrived. 8 Messages · 10 Updates · 31 Reading · 1 spam.     │"
"│  Also 2 in To do.                                                            │"
"│                                                                              │"
"│ ── Not sure ──────────────────────────────────────────────────────────────── │"
"│  2 emails I wasn't sure about. Where should these go?                        │"
"│▌ Maya Ortiz copied you on "Q0 plan". Updates for now.                        │"
"│    m Messages  x To do  u Updates  r Reading  e Archive                      │"
"│  Maya Ortiz copied you on "Q1 plan". Updates for now.                        │"
"│                                                                              │"
"│ ── People ────────────────────────────────────────── and 8 more in Messages  │"
"│  11 people are waiting on you. The three below are furthest past your usual  │"
"│  pace.                                                                       │"
"│  Maya Ortiz              Can you send the launch checklist?              22h │"
"│  Sam Okafor              Are you around Thursday?                         3h │"
"│  Iris Chen               Does the incident note read right?              24h │"
"│    New sender. Keep in Messages? 1 Messages 2 Updates 3 Reading 4 Block      │"
"│                                                                              │"
"│ ── Due soon ─────────────────────────────────────────── and 2 more in To do  │"
"│  [ ] Pay council tax                       act by Wed 7 Oct · due Fri 9 Oct  │"
"│  [ ] Sign lease renewal                  act by Mon 13 Oct · due Wed 15 Oct  │"
"│                                                                              │"
"│ ── Updates 08:00 digest ─────────────────────────────────────── +23 routine  │"
"│  1 needs a look, 2 changed. 23 routine from 9 sources.                       │"
"│  ! Google              New sign-in from Chrome on Windows · (already in To…  │"
"│  ◆ Strava              21.3 km over 3 runs                                   │"
"│    ↵ open  A let go of this digest                                           │"
"│                                                                              │"
"│  Not now: Reading 6 this week                                                │"
"│                                                                              │"
"│ Maya Ortiz copied you on "Q0 plan". Updates for now.                         │"
"│ ↵ open in its mode  e done here  t make it a to-do  r reply  o open the ema… │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
