crates/tui/src/ui/snapshots/mxr_tui__ui__now_lens__tests__now_lens_clear_80.snap
---
source: crates/tui/src/ui/now_lens.rs
expression: rendered
---
"╭ Now ─ The few things that need you now, from every mode. ────────────────────╮"
"│  Friday afternoon. Nothing needs you.                                        │"
"│                                                                              │"
"│  Clear. The next to-do surfaces Mon 19 Oct 09:00.                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ↵ open in its mode  e done here  t make it a to-do  r reply  o open the ema… │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
