crates/tui/src/ui/snapshots/mxr_tui__ui__now_lens__tests__now_lens_first_card_120.snap
---
source: crates/tui/src/ui/now_lens.rs
expression: rendered
---
"╭ Now ─ The few things that need you now, from every mode. ────────────────────────────────────────────────────────────╮"
"│  Friday afternoon. 3 people, 2 things to act on.                                                                     │"
"│                                                                                                                      │"
"│  │ Now shows at most ten things: people waiting on you, things due soon, the latest updates and, after 17:00, one    │"
"│  │ thing to read. Acting on a row here does it in that row's own mode.                                               │"
"│  │ Enter open in its mode · e done here · ? what is this · Esc close                                                 │"
"│                                                                                                                      │"
"│ ── People ────────────────────────────────────────────────────────────────────────────────── and 8 more in Messages  │"
"│  11 people are waiting on you. The three below are furthest past your usual pace.                                    │"
"│▌ Maya Ortiz              Can you send the launch checklist?                                                      22h │"
"│  Sam Okafor              Are you around Thursday?                                                                 3h │"
"│  Iris Chen               Does the incident note read right?                                                      24h │"
"│    New sender. Keep in Messages? 1 Messages 2 Updates 3 Reading 4 Block                                              │"
"│                                                                                                                      │"
"│ ── Due soon ─────────────────────────────────────────────────────────────────────────────────── and 2 more in To do  │"
"│  [ ] Pay council tax                                                 act by Wed 7 Oct · due Fri 9 Oct  Camden Council│"
"│  [ ] Sign lease renewal                                                       act by Mon 13 Oct · due Wed 15 Oct  Sam│"
"│                                                                                                                      │"
"│ ── Updates since 08:00 ────────────────────────────────────────────────────────────────────────────── early version  │"
"│  23 updates from 9 sources. Most from GitHub, Vercel and Stripe.                                                     │"
"│    ↵ open  A let go of this digest                                                                                   │"
"│                                                                                                                      │"
"│  Not now: Reading 6 this week                                                                                        │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ From Messages: your turn with Maya Ortiz, 22h.                                                                       │"
"│ ↵ open in its mode  e done here  t make it a to-do  r reply  o open the email  u undo  A let go of digest  ? keys    │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
